--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -5,10 +5,10 @@
 
 
 
+/*
 
 
-
-/* :root {
+ :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -52,7 +52,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #c20f0f;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -84,6 +84,7 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #e60000;
   }
-} */
+}  
+*/
